After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 765961 - Fix element leak in gstutils.c:find_common_root()
Fix element leak in gstutils.c:find_common_root()
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other Linux
: Normal normal
: 1.8.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-05-04 08:00 UTC by Guillaume Desmottes
Modified: 2016-05-06 06:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
utils: fix element leak in find_common_root() (1.37 KB, patch)
2016-05-04 08:00 UTC, Guillaume Desmottes
none Details | Review
utils: fix element leak in find_common_root() (1.46 KB, patch)
2016-05-04 08:50 UTC, Guillaume Desmottes
committed Details | Review

Description Guillaume Desmottes 2016-05-04 08:00:23 UTC
.
Comment 1 Guillaume Desmottes 2016-05-04 08:00:38 UTC
Created attachment 327271 [details] [review]
utils: fix element leak in find_common_root()

The root element was not unreffed when iterating over ancestors.
Comment 2 Sebastian Dröge (slomo) 2016-05-04 08:35:04 UTC
Review of attachment 327271 [details] [review]:

::: gst/gstutils.c
@@ +1364,3 @@
       return root;
     }
+    gst_object_unref (root);

Isn't it also leaking root a few lines below when setting root = kid1?
Comment 3 Guillaume Desmottes 2016-05-04 08:50:01 UTC
Yep, I fixed it as well but got confused when I recorded my commit. :)
Comment 4 Guillaume Desmottes 2016-05-04 08:50:16 UTC
Created attachment 327273 [details] [review]
utils: fix element leak in find_common_root()

The root element was not unreffed when iterating over ancestors.
Comment 5 Sebastian Dröge (slomo) 2016-05-04 09:04:10 UTC
Attachment 327273 [details] pushed as 30ee36e - utils: fix element leak in find_common_root()